discussion/kv_engine/153168/153168_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39745: Manually size shards in VBucketMap

Manually size the KVShard vector as we know the correct size.

Change-Id: I1f2d302bcb12170bfe612860b8437951fa875c05

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-10 10:04:35.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-10 10:14:07.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8892/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& error_category() NOEXCEPT;
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:282:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:286:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:291:41: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
    return std::error_condition(int(e), error_category());
                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:139:52: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& engine_error_category() NOEXCEPT;
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:144:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:147:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:151:41: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
    return std::error_condition(int(e), engine_error_category());
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8892/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8892/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35723/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\include\memcached/engine_error.h(139): error C3646: "NOEXCEPT": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35723/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30552/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30552/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9512/ : FAILURE

Compile error at [2021-05-10T10:08:32.446Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9512/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10584/ : FAILURE

Compile error at [2021-05-10T10:11:52.736Z] ../kv_engine/include/memcached/engine_error.h:139:52:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10584/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10834/ : FAILURE

Compile error at [2021-05-10T10:12:28.684Z] ../kv_engine/include/memcached/engine_error.h:139:52:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10834/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10444/ : FAILURE

Compile error at [2021-05-10T10:11:35.805Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10444/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18393/ : FAILURE

Compile error at [2021-05-10T10:13:31.259Z] ../kv_engine/include/memcached/engine_error.h:139:52:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18393/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7444/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
